<resources>
    <string name="app_name">Hackathon</string>

    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_back">Back</string>
    <string name="btn_plus">Plus</string>
    <string name="btn_minus">Minus</string>
    <string name="hint_level">Level</string>

    <string-array name="levels">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
        <item>Level 10</item>
    </string-array>
</resources>